Update resource names

--- a/.github/workflows/workflow.destroy.bicep.yml
+++ b/.github/workflows/workflow.destroy.bicep.yml
@@ -18,7 +18,7 @@ on:
       keyVaultName:
         description: "Environment Key Vault Name"
         required: true
-        default: "kv-symphony-environments"
+        default: "kv-tqqhvhhe-771"
 
 jobs:
   Destroy:
