updated permissions for codeql

--- a/.github/workflows/template.bicep.validate.yml
+++ b/.github/workflows/template.bicep.validate.yml
@@ -18,6 +18,11 @@ on:
       azureEnviromentCredentials:
         required: true
 
+permissions:
+  actions: read
+  contents: read
+  security-events: write
+
 jobs:
   Validate:
     name: Validate
