updated checks permission

--- a/.github/workflows/workflow.ci.bicep.yml
+++ b/.github/workflows/workflow.ci.bicep.yml
@@ -25,9 +25,10 @@ on:
         default: "kv-tqqhvhhe-771"
 
 permissions:
-  actions: read
-  contents: read
+  actions: write
+  contents: write
   security-events: write
+  checks: write
 
 jobs:
   Validate:
