--- a/.github/workflows/workflow.ci.bicep.yml
+++ b/.github/workflows/workflow.ci.bicep.yml
@@ -1,8 +1,8 @@
 name: "CI Bicep"
 
 on:
-  push:
-     branches: [main]
+  # push:
+  #    branches: [main]
   # pull_request:
   #   branches: [main]
 
